<resources>
    <string name="app_name">OMarket</string>

    // Navigation drawer
    <string name="home" translatable="true">Home</string>
    <string name="sell">Sell</string>
    <string name="favorite">Favorite</string>
    <string name="my_product">My Product</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About Us</string>

    // Navigation drawer header
    <string name="sign_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    /// MainActivity
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    /// MyProductActivity ////////////////
    <string name="contact_owner">Contact Owner</string>
    <string name="no_product">No Product</string>

    /// SignUpActivity ////////////////////
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="create_acc">Create Account</string>
    <string name="dont_have_acc">New user?, Click Here</string>

    /// SellActivity ///////////////////
    <string name="no_user">Sign Up or Log In to sell product</string>
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="add_photo">Choose Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_image">Choose from Library</string>
    <string name="cancel">Cancel</string>

    //// Other /////////////////////////////////////
    <string name="no_data">No data</string>
    <string name="welcome">Welcome to</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>

    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>

    <string name="selected">selected</string>
    <string name="limit_exceeded">Select maximum of %d images</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="add">Add</string>
    <string name="capture_photo">Capture Photo</string>
    <string-array name="product_categories">
        <item>Phones and Tables</item>
        <item>Computers</item>
        <item>Electronics</item>
        <item>Equipments and Home </item>
        <item>Clothes, Shoes and Jewellery</item>
        <item>Beauty and Care</item>
        <item>Automotive Part and Accessories</item>
        <item>Sport and Outdoor</item>
        <item>Office Product</item>
        <item>Home and Kitchen</item>
        <item>Movies and TV</item>
        <item>Books</item>
        <item>Apps and Games</item>
        <item>Toys</item>
        <item>Education</item>
        <item>Musical Instrument</item>
        <item>Food and Drink</item>
    </string-array>

    <string-array name="sub_office_product">
        <item>Pens</item>
        <item>Textbooks</item>
        <item>Pencils</item>
        <item>Ruler</item>
        <item>Pen Rube</item>
        <item>Pencil Rube</item>
    </string-array>

    <string-array name="sub_musical_instrument">
        <item>Guitars</item>
        <item>Pianos</item>
        <item>Drums</item>
    </string-array>

    <string-array name="sub_phone">
        <item>Alcatel</item>
        <item>Asus</item>
        <item>Apple</item>
        <item>Black Berry</item>
        <item>BLU</item>
        <item>Camphone</item>
        <item>Gigabyte</item>
        <item>Huawei</item>
        <item>HTC</item>
        <item>LeEco</item>
        <item>LG</item>
        <item>Lenovo</item>
        <item>Meizu</item>
        <item>Microsoft</item>
        <item>Motorola</item>
        <item>Nokia</item>
        <item>OnePlus</item>
        <item>Oppo</item>
        <item>Samsung</item>
        <item>Singtech</item>
        <item>Sony</item>
        <item>Vertu</item>
        <item>Xiaomi</item>
        <item>Zopo</item>
        <item>ZTE</item>
        <item>Other</item>
    </string-array>

    <string-array name="sub_computer">
        <item>Acer</item>
        <item>Aleinware</item>
        <item>Apple</item>
        <item>Asus</item>
        <item>Compaq</item>
        <item>Dell</item>
        <item>Gigabyte</item>
        <item>HP</item>
        <item>Lenovo</item>
        <item>Microsoft</item>
        <item>MSI</item>
        <item>Panasonic</item>
        <item>Razer</item>
        <item>Samsung</item>
        <item>Toshiba</item>
        <item>Vaio</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="currencies">
        <item>USD</item>
        <item>RIEL</item>
    </string-array>

    <string-array name="locations">
        <item>Banteaymeanchey</item>
        <item>Battambang</item>
        <item>Kampong Cham</item>
        <item>Kampong Chnang</item>
        <item>Kampong Spue</item>
        <item>Kampong Thum</item>
        <item>Kampot</item>
        <item>Kandal</item>
        <item>Kep</item>
        <item>Koh Kong</item>
        <item>Kratie</item>
        <item>Mundol Kiri</item>
        <item>Oudor Meanchey</item>
        <item>Pailen</item>
        <item>Phnom Penh</item>
        <item>Preah Vihear</item>
        <item>Preah Sihaknu</item>
        <item>Prey Veng</item>
        <item>Pursat</item>
        <item>Ratanak Kiri</item>
        <item>Siem Reap</item>
        <item>Stoeng Traeng</item>
        <item>Svay Reang</item>
        <item>Takeo</item>
        <item>Tbong Kmum</item>
    </string-array>
    <string-array name="choose_image_options">
        <item>Take Photo</item>
        <item>Choose from Library</item>
    </string-array>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
