<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/shopping_cart"
            android:title="@string/sell" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/heart"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_my_product"
            android:icon="@drawable/monitor"
            android:title="@string/my_product" />
    </group>
    <item android:title="@string/more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/chat_2"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/avatar"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>