<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/dt_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell"
            android:textColor="#000"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/dt_img_thumbnail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/product_name"
            android:src="@drawable/picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:id="@+id/dt_txt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/price"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/dt_txt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/location"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <TextView
            android:id="@+id/dt_txt_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/category"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/dt_txt_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/description"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_owner" />

        <TextView
            android:id="@+id/dt_txt_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/contact_owner"
            android:textColor="#000" />

        <TextView
            android:id="@+id/dt_txt_contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:text="@string/contact_owner"
            android:textColor="#000" />

        <TextView
            android:id="@+id/dt_txt_contact3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/contact_owner"
            android:textColor="#000" />

        <TextView
            android:id="@+id/dt_txt_contact4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingStart="12dp"
            android:text="@string/contact_owner"
            android:textColor="#000" />

    </LinearLayout>

</ScrollView>