<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/li_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="kh.com.omarket.RegistrationActivity">

    <TextView
        android:id="@+id/li_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/li_edt_mail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edt_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/li_edt_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edt_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/li_btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_style"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/li_txt_dont_have_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/dont_have_acc"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>