<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    card_view:layout_collapseMode="parallax"
    card_view:contentPadding="6dp"
    card_view:cardPreventCornerOverlap="true"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    card_view:theme="@style/CardView.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/product_name"
            android:src="@drawable/picture" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/card_img"
            android:layout_toRightOf="@+id/card_img"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/card_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title"
            android:layout_toEndOf="@+id/card_img"
            android:layout_toRightOf="@id/card_img"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:text="@string/location"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/card_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:maxLines="1"
            android:text="@string/price"
            android:textColor="#35ae2e"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
