<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/app_name"
        apps:contentInsetEnd="0dp"
        apps:contentInsetLeft="0dp"
        apps:contentInsetRight="0dp"
        apps:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/toolbar_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/add_photo"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/toolbar_txt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/toolbar_back_arrow_layout"
                android:layout_width="56dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back_arrow" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>